first good test

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,46 +3,39 @@ project:
   
 website: 
   page-navigation: true
-  title: "Making sharable documents with Quarto" 
-  site-url: "https://openscapes.github.io/quarto-website-tutorial" 
-  repo-url: https://github.com/openscapes/quarto-website-tutorial 
-  repo-actions: [edit, issue]
+  title: "Pristine Seas Expedition- Palau (2024)" 
+  site-url: "https://pristine-seas.github.io/exp-PLW-2024" 
+  repo-url: https://github.com/pristine-seas/exp-PLW-2024
+  repo-actions: [issue]
   
   page-footer:
     right: "This page is built with ❤️ and [Quarto](https://quarto.org/)."
     left: "&copy; CC-By Openscapes, 2024"
     
   sidebar:
-    logo: "images/openscapes_hex.png"
+    logo: "images/logo.png"
     pinned: true
-    align: center
+    align: bottom
     tools: 
       - icon: globe
-        href: https://openscapes.org
-        text: "Openscapes.org"
+        href: https://pristineseas.org
+        text: "pristineseas.org"
       - icon: github
         href: https://github.com/openscapes/quarto-website-tutorial
-        text: "Quarto website tutorial"
-      - icon: twitter
-        href: https://twitter.com/openscapes
-        text: "Openscapes Twitter"         
+        text: "Palau 2024 expedition"
+      - icon: hdd
+        href: "https://drive.google.com/drive/folders/1wFrwIccznqruKO5ViatH6onK5i0xCutd?usp=sharing"         
 
     style: "docked"
     search: true
     collapse-level: 1
     contents:
       - href: index.qmd
-        text: Welcome
-      - explore.qmd
-      - section: quarto-workflows/index.qmd
-        contents: 
-          - quarto-workflows/browser.md
-          - quarto-workflows/rstudio.qmd
-          - quarto-workflows/jupyter.md 
-      - learning-more.qmd
-      - href: transition-from-rmarkdown.qmd
-        text: Transition from Rmd
-
+        text: Summary of work
+      - href: 01_fish_surveys.qmd
+        text: Fish Surveys
+      - href: 02_benthos_surveys.qmd
+        text: Benthos
 
 format:
   html:
