--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -11,6 +11,13 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2 
         
+      - name: Install and activate renv
+        run: |
+          install.packages("renv")
+          renv::activate()
+          renv::restore()
+        shell: Rscript {0}
+        
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
