--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -12,11 +12,12 @@ jobs:
         uses: actions/checkout@v2 
         
       - name: Install and activate renv
-        run: |
-          install.packages("renv")
-          renv::activate()
-          renv::restore()
-        shell: Rscript {0}
+        uses: r-lib/actions/setup-r@v2
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages:
+            any::rmarkdown
+            any::knitr
         
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
