--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -11,14 +11,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2 
         
-      - name: Install and activate renv
-        uses: r-lib/actions/setup-r@v2
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          packages:
-            any::rmarkdown
-            any::knitr
-        
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
@@ -26,6 +18,11 @@ jobs:
           tinytex: true 
           # uncomment below and fill to pin a version
           # version: 0.9.600
+          
+      - name: Install R Dependencies 
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
       
       # add software dependencies here
 
